--- a/style/register-style.css
+++ b/style/register-style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+    padding: 100px;
     height: 100vh;
     width: 100hh;
     background-color: #111111;
@@ -148,6 +149,18 @@ a {
 .or-wrapper {
     margin-top: 20px;
     margin-bottom: 20px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.line {
+    height: 1px;
+    background-color: #555555;
+    width: 100px;
+    margin: 5px;
 }
 
 .google-wrapper {
