--- a/style/login-style.css
+++ b/style/login-style.css
@@ -148,6 +148,18 @@ a {
 .or-wrapper {
     margin-top: 20px;
     margin-bottom: 20px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.line {
+    height: 1px;
+    background-color: #555555;
+    width: 100px;
+    margin: 5px;
 }
 
 .google-wrapper {
