--- a/style/homepage-style.css
+++ b/style/homepage-style.css
@@ -51,6 +51,31 @@ a {
     height: 40px;
 }
 
+.profile-wrapper-a {
+    padding: 5% 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-wrapper {
+    width: auto;
+    margin-top: 15%;
+    border-radius: 25px 0px 0px 25px;
+
+}
+.profile-wrapper:hover {
+    background-color: #161616;
+}
+
+.profile-text {
+    margin-left: 10px;
+}
+
+.profile-image {
+    height: 20px;
+    border-radius: 100%;
+}
+
 .navbar-tile {
     margin-top: 30px;
     width: 100%;
