--- a/style/add-post-page-style.css
+++ b/style/add-post-page-style.css
@@ -40,6 +40,8 @@ a {
 }
 
 .navbar {
+    z-index: 2;
+
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -56,7 +58,7 @@ a {
     flex-direction: column;
 
     height: 94vh;
-    width: 30%;
+    width: 18%;
     padding-top: 3vh;
     padding-bottom: 3vh;
 }
@@ -70,13 +72,14 @@ a {
 }
 
 .profile-wrapper-a {
-    padding: 5% 20%;
     display: flex;
     flex-direction: row;
+    
+    background-color: aqua;
 }
 
 .profile-wrapper {
-    width: auto;
+    width: 100%;
     margin-top: 15%;
     border-radius: 25px 0px 0px 25px;
 
@@ -124,6 +127,14 @@ a {
 
 .tile-unactive:hover {
     background-color: #161616;
+}
+
+.logout-button-wrapper {
+    display: flex;
+    align-items:flex-end;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .button-a {
@@ -184,18 +195,124 @@ a {
 }
 
 .main-content {
+    z-index: 3;
+
+
     height: fit-content;
-    width: 100%;
-    padding: 3%;
+    width: 50%;
+    padding: 3% 6%;
+}
+
+/* BARU */
+.add-post-wrapper {
+    width: 70%;
+}
+
+.header-text-add-post {
+    font-size: 25px;
+    font-family: Bold-Font;
+}
+
+.media-wrapper {
+    margin-top: 30px;
+    width: 50%;
+}
+
+.media-image-add {
+    width: 350px;
+    height: 180px;
+
+    border: 1px solid #DD57F3;
+    border-radius: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    transition: 0.5s ease-in-out;
+}
+
+.media-add-text-1 {
+    color: #DD57F3;
+}
+.media-add-text-2 {
+    color: #DD57F3;
+    display: none;
+}
+
+.media-image-add:hover .media-add-text-2{
+    display: flex;
+}
+
+.media-image-add:hover .media-add-text-1{
+    display: none;
+}
+
+.input-file {
+    display: none;
+}
+
+.input-caption-wrapper {
+    margin-top: 10px;
+}
+
+.caption-wrapper{
+    margin-top: 30px;
+}
+
+.caption-text {
+    font-size: 18px;
+    color: white;
+}
+
+.input-caption {
+    width: 80%;
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    font-size: 15px;
+    border-radius: 5px;
+}
+
+.submit-button-wrapper {
+    width: 85%;
+    margin-top: 30px;
+    height: fit-content;
+
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.submit-button {
+    width: 30%;
+    padding: 10px 0px;
+
+    border-radius: 8px;
+    font-size: 12px;
+    outline: none;
+    border: none;
+    color: white;
+
+    background-image: linear-gradient(to right, #DD57F3, #FC354A);
+    cursor: pointer;
+}
+/* BARU */
+
+.post-content-wrapper {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
 }
 
 .post-content {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: fit-content;
-
-    padding: 0% 0% 4% 0%;
+    width: 70%;
 }
 
 .profile-tile-image {
@@ -219,15 +336,15 @@ h3 {
 }
 
 .image-content {
-    padding: 2%;
+    margin-top: 40px;
 }
 
 .profile-content-image {
-    height: 500px;
+    width: 100%;
 }
 
 .caption-content {
-    padding: 0% 2%;
+    margin-top: 10px;
 }
 
 h4 {
@@ -237,7 +354,8 @@ h4 {
 }
 
 .time-content {
-    padding: 1% 2%;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 h5 {
@@ -247,7 +365,6 @@ h5 {
 }
 
 .line-end {
-    padding: 3% 2%;
     width: 100%;
     height: fit-content;
 }
@@ -258,14 +375,114 @@ h5 {
     background-color: #444444;
 }
 
+.header-main-content {
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    border-radius: 100%;
+}
+
+.content-profile-img {
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+}
+
+.profile-name {
+    margin-top: 20px;
+    font-size: 12px
+}
+
+.edit-profile-button {
+    margin-top: 20px;
+    width: 100%;
+    padding: 8px 0px;
+    border-radius: 8px;
+    font-size: 12px;
+    outline: none;
+    border: none;
+    
+    color: white;
+    background-color: #8947A0;
+}
+.edit-profile-button:hover {
+    cursor: pointer;
+}
+
+.button-profile {
+    width: 50%;
+}
+
+.profile-container-top {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-number {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.number-post {
+    font-size: 20px;
+    font-family: Medium-Font;
+}
+.number-title {
+    margin-top: 5px;
+    font-size: 11px;
+    font-family: Regular-Font;
+}
+
+.tile-number-profile {
+    margin-left: 60px;
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-number2 {
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.line-between {
+    margin-top: 30px;
+    width: 50%;
+    height: 2px;
+    background-color: #444444;
+}
+
 .side-profile-container {
+    z-index: 1;
+
     width: 100%;
     height: 100%;
     position: fixed;
 
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: end;
+}
+
+.wrapper-main {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .side-profile-content {
