--- a/style/homepage-style.css
+++ b/style/homepage-style.css
@@ -222,8 +222,20 @@ h3 {
     padding: 2%;
 }
 
+.image-post-wrapper {
+    border-radius: 10px;
+    height: 400px;
+    width: 400px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .profile-content-image {
-    height: 500px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .caption-content {
