plis benerin qil

--- a/style/edit-profile-page-style.css
+++ b/style/edit-profile-page-style.css
@@ -379,8 +379,8 @@ h5 {
 
     opacity: 0;
     position: absolute;
-    top: 50%; /* Atur posisi vertikal */
-    left: 50%; /* Atur posisi horizontal */
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     cursor: pointer;
